--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "vercel-python@0.4.0"
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.py",
+      "use": "@vercel/python"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "index.py"
+    }
+  ]
 }
